added express config and json data for server

--- a/src/app/store/cartDetail.component.html
+++ b/src/app/store/cartDetail.component.html
@@ -49,7 +49,9 @@
         <div class="col">
             <div class="text-center">
                 <button class="btn btn-primary m-1" [routerLink]="['/store']">Continue Shopping</button>
-                <button class="btn btn-secondary m-1" [disabled]="cart.lines.length == 0" [routerLink]="['/checkout']">Checkout</button>
+                <button class="btn btn-secondary m-1" [disabled]="cart.lines.length == 0 || !connected" [routerLink]="['/checkout']">
+                    {{ connected ? 'Checkout' : 'Offline' }}
+                </button>
             </div>
         </div>
     </div>
